font-poppins added for entire body

--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
         }
     </style>
 </head>
-<body>
+<body class="font-poppins">
     <!-- Header Section Stars Here -->
-     <header></header>
+     <header>
+        
+     </header>
 
      <!-- Main Section Starts Here -->
       <main></main>
