--- a/index.html
+++ b/index.html
@@ -47,13 +47,14 @@
                       <li><a>Item 3</a></li>
                     </ul>
                   </div>
-                  <a class="btn btn-ghost text-xl">daisyUI</a>
+                  <a class="btn btn-ghost text-xl">Bike Dekho</a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
                   <ul class="menu menu-horizontal px-1">
-                    <li><a href="#">Item 1</a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#">Item 3</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Shop</a></li>
+                    <li><a href="#">News</a></li>
+                    <li><a href="#">Contact</a></li>
                   </ul>
                 </div>
                 <div class="navbar-end">
