navber-button text has changed to login

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                   </ul>
                 </div>
                 <div class="navbar-end">
-                  <a class="btn">Button</a>
+                  <a class="btn">Login</a>
                 </div>
             </div>
         </nav>
