--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    
     <!-- DaisyUi CDN links -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
@@ -58,20 +59,20 @@
                   </ul>
                 </div>
                 <div class="navbar-end">
-                  <a class="btn">Login</a>
+                  <a class="btn bg-orange-400 text-white">Login</a>
                 </div>
             </div>
         </nav>
      </header>
 
      <!-- Main Section Starts Here -->
-      <main>
+     <main>
 
-      </main>
+     </main>
 
-      <!-- Footer Section Starts Here -->
-      <footer>
+     <!-- Footer Section Starts Here -->
+     <footer>
 
-      </footer>
+     </footer>
 </body>
 </html>
