--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                       <li><a href="#">Contact</a></li>
                     </ul>
                   </div>
-                  <a class="text-xl">Bike Dekho</a>
+                  <a class="text-xl font-bold">Bike Dekho</a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
                   <ul class="menu menu-horizontal px-1">
