--- a/index.html
+++ b/index.html
@@ -62,11 +62,18 @@
       <div class="carousel w-full">
         <!-- Slide 1 -->
         <div id="slide1" class="carousel-item relative w-full">
-          <img
-            src="https://img.daisyui.com/images/stock/photo-1625726411847-8cbb60cc71e6.webp"
-            class="w-full" />
+          <div>
+            <!-- Text -->
+            <div>
+              <h2>Ride-on R15 V4 with Smile</h2>
+            </div>
+            <!-- Image -->
+             <div>
+              <img src="./images/slider/bike1.png" class="w-full" />
+             </div>
+          </div>
           <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-            <a href="#slide4" class="btn btn-circle">❮</a>
+            <a href="#slide3" class="btn btn-circle">❮</a>
             <a href="#slide2" class="btn btn-circle">❯</a>
           </div>
         </div>
@@ -84,7 +91,7 @@
         <div id="slide3" class="carousel-item relative w-full">
           <img
             src="https://img.daisyui.com/images/stock/photo-1414694762283-acccc27bca85.webp"
-            class="w-full" />
+            class="w-1/3" />
           <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
             <a href="#slide2" class="btn btn-circle">❮</a>
             <a href="#slide1" class="btn btn-circle">❯</a>
