flex class added for banner text and banner image container

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
       <div class="carousel w-full">
         <!-- Slide 1 -->
         <div id="slide1" class="carousel-item relative w-full">
-          <div>
+          <div class="flex">
             <!-- Text -->
             <div>
-              <h2>Ride-on R15 V4 with Smile</h2>
+              <h2>Ride-on R15 V4 <br> with Smile</h2>
             </div>
             <!-- Image -->
              <div>
