banner-title font-size and font-weight added

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <div class="flex">
             <!-- Text -->
             <div>
-              <h2>Ride-on R15 V4 <br> with Smile</h2>
+              <h2 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
             </div>
             <!-- Image -->
              <div>
