banner-description added for banner-section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <!-- Text -->
             <div>
               <h2 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
+              <p>Ride-on the R15 V4 with a smile, feeling the thrill of speed and the joy of the ride. A perfect blend of power, style, and excitement on every turn.</p>
             </div>
             <!-- Image -->
              <div>
