--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <div>
               <h2 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
               <p>Ride-on the R15 V4 with a smile, feeling the thrill of speed and the joy of the ride. A perfect blend of power, style, and excitement on every turn.</p>
+              <button>Purchase</button>
             </div>
             <!-- Image -->
              <div>
