background-color added for banner-area

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
      <header class="md:container mx-auto">
       <!-- Nav Area -->  
         <nav>
-            <div class="navbar bg-base-100 shadow-sm">
+            <div class="navbar bg-base-100">
                 <div class="flex-1">
                   <div class="dropdown">
                     <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -59,18 +59,18 @@
         </nav>
 
       <!--Banner Slider Section -->
-      <div class="carousel w-full">
+      <div class="carousel w-full bg-[#E76F511A]">
         <!-- Slide 1 -->
         <div id="slide1" class="carousel-item relative w-full">
           <div class="flex">
             <!-- Text -->
-            <div>
+            <div class="flex-1">
               <h2 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
               <p>Ride-on the R15 V4 with a smile, feeling the thrill of speed and the joy of the ride. A perfect blend of power, style, and excitement on every turn.</p>
-              <button class="btn btn-lg bg-orange-400 text-white text-xl px-8 py-4">Purchase</button>
+              <button class="btn btn-lg bg-orange-400 text-white text-xl px-6 py-4">Purchase</button>
             </div>
             <!-- Image -->
-             <div>
+             <div class="flex-1">
               <img src="./images/slider/bike1.png" class="w-full" />
              </div>
           </div>
