padding added for slider area

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="carousel w-full bg-[#E76F511A]">
         <!-- Slide 1 -->
         <div id="slide1" class="carousel-item relative w-full">
-          <div class="flex">
+          <div class="flex p-24">
             <!-- Text -->
             <div class="flex-1">
               <h2 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
