height added for carousel area and width added for banner-image

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </nav>
 
       <!--Banner Slider Section -->
-      <div class="carousel w-full bg-[#E76F511A]">
+      <div class="carousel w-full h-[550px] bg-[#E76F511A]">
         <!-- Slide 1 -->
         <div id="slide1" class="carousel-item relative w-full">
           <div class="flex p-24">
@@ -71,7 +71,7 @@
             </div>
             <!-- Image -->
              <div class="flex-1">
-              <img src="./images/slider/bike1.png" class="w-full" />
+              <img src="./images/slider/bike1.png" class="w-[400px]" />
              </div>
           </div>
           <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
