header-area is responsive for small device

--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
         </nav>
 
       <!--Banner Slider Section -->
-      <div class="carousel w-full h-[550px] bg-[#E76F511A]">
+      <div class="carousel w-full lg:h-[550px] bg-[#E76F511A]">
         <!-- Slide 1 -->
         <div id="slide1" class="carousel-item relative w-full">
-          <div class="flex p-24">
+          <div class="flex flex-col lg:flex-row p-12 lg:p-24">
             <!-- Text -->
             <div class="flex-1">
-              <h2 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
-              <p>Ride-on the R15 V4 with a smile, feeling the thrill of speed and the joy of the ride. A perfect blend of power, style, and excitement on every turn.</p>
+              <h2 class="text-4xl lg:text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
+              <p class="pt-5 pb-7">Ride-on the R15 V4 with a smile, feeling the thrill of speed and the joy of the ride. <br> A perfect blend of power, style, and excitement on every turn.</p>
               <button class="btn btn-lg bg-orange-400 text-white text-xl px-6 py-4">Purchase</button>
             </div>
             <!-- Image -->
