--- a/index.html
+++ b/index.html
@@ -75,15 +75,24 @@
              </div>
           </div>
           <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-            <a href="#slide3" class="btn btn-circle">❮</a>
+            <a href="#slide4" class="btn btn-circle">❮</a>
             <a href="#slide2" class="btn btn-circle">❯</a>
           </div>
         </div>
         <!-- Slide 2 -->
         <div id="slide2" class="carousel-item relative w-full">
-          <img
-            src="https://img.daisyui.com/images/stock/photo-1609621838510-5ad474b7d25d.webp"
-            class="w-full" />
+          <div class="flex flex-col lg:flex-row p-12 lg:p-24">
+            <!-- Text -->
+            <div class="flex-1">
+              <h2 class="text-4xl lg:text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
+              <p class="pt-5 pb-7">Ride-on the R15 V4 with a smile, feeling the thrill of speed and the joy of the ride. <br> A perfect blend of power, style, and excitement on every turn.</p>
+              <button class="btn btn-lg bg-orange-400 text-white text-xl px-6 py-4">Purchase</button>
+            </div>
+            <!-- Image -->
+             <div class="flex-1">
+              <img src="./images/slider/bike2.png" class="w-[400px]" />
+             </div>
+          </div>
           <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
             <a href="#slide1" class="btn btn-circle">❮</a>
             <a href="#slide3" class="btn btn-circle">❯</a>
@@ -91,11 +100,39 @@
         </div>
         <!-- Slide 3 -->
         <div id="slide3" class="carousel-item relative w-full">
-          <img
-            src="https://img.daisyui.com/images/stock/photo-1414694762283-acccc27bca85.webp"
-            class="w-1/3" />
+          <div class="flex flex-col lg:flex-row p-12 lg:p-24">
+            <!-- Text -->
+            <div class="flex-1">
+              <h2 class="text-4xl lg:text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
+              <p class="pt-5 pb-7">Ride-on the R15 V4 with a smile, feeling the thrill of speed and the joy of the ride. <br> A perfect blend of power, style, and excitement on every turn.</p>
+              <button class="btn btn-lg bg-orange-400 text-white text-xl px-6 py-4">Purchase</button>
+            </div>
+            <!-- Image -->
+             <div class="flex-1">
+              <img src="./images/slider/bike3.png" class="w-[400px]" />
+             </div>
+          </div>
           <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
             <a href="#slide2" class="btn btn-circle">❮</a>
+            <a href="#slide4" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <!-- Slide 4 -->
+        <div id="slide4" class="carousel-item relative w-full">
+          <div class="flex flex-col lg:flex-row p-12 lg:p-24">
+            <!-- Text -->
+            <div class="flex-1">
+              <h2 class="text-4xl lg:text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
+              <p class="pt-5 pb-7">Ride-on the R15 V4 with a smile, feeling the thrill of speed and the joy of the ride. <br> A perfect blend of power, style, and excitement on every turn.</p>
+              <button class="btn btn-lg bg-orange-400 text-white text-xl px-6 py-4">Purchase</button>
+            </div>
+            <!-- Image -->
+             <div class="flex-1">
+              <img src="./images/slider/bike4.png" class="w-[400px]" />
+             </div>
+          </div>
+          <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+            <a href="#slide3" class="btn btn-circle">❮</a>
             <a href="#slide1" class="btn btn-circle">❯</a>
           </div>
         </div>
