navbar-spacing added

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
                       <li><a href="#">Contact</a></li>
                     </ul>
                   </div>
-                  <a class="text-xl font-bold">Bike Dekho</a>
+                  <a class="text-4xl font-bold">Bike Dekho</a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
-                  <ul class="menu menu-horizontal px-1">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Shop</a></li>
-                    <li><a href="#">News</a></li>
-                    <li><a href="#">Contact</a></li>
+                  <ul class="menu menu-horizontal px-1 gap-5">
+                    <li><a class="font-medium" href="#">Home</a></li>
+                    <li><a class="font-medium" href="#">Shop</a></li>
+                    <li><a class="font-medium" href="#">News</a></li>
+                    <li><a class="font-medium" href="#">Contact</a></li>
                   </ul>
                 </div>
                 <div class="">
@@ -62,11 +62,11 @@
       <div class="carousel w-full lg:h-[550px] bg-[#E76F511A]">
         <!-- Slide 1 -->
         <div id="slide1" class="carousel-item relative w-full">
-          <div class="flex flex-col lg:flex-row p-12 lg:p-24">
+          <div class="flex items-center flex-col lg:flex-row p-12 lg:p-24">
             <!-- Text -->
             <div class="flex-1">
               <h2 class="text-4xl lg:text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
-              <p class="pt-5 pb-7">Ride-on the R15 V4 with a smile, feeling the thrill of speed and the joy of the ride. <br> A perfect blend of power, style, and excitement on every turn.</p>
+              <p class="pt-5 pb-7">Ride-on the R15 V4 with a smile, feeling the thrill of speed and the joy of the ride. A perfect blend of power, style, and excitement on every turn.</p>
               <button class="btn btn-lg bg-orange-400 text-white text-xl px-6 py-4">Purchase</button>
             </div>
             <!-- Image -->
@@ -81,7 +81,7 @@
         </div>
         <!-- Slide 2 -->
         <div id="slide2" class="carousel-item relative w-full">
-          <div class="flex flex-col lg:flex-row p-12 lg:p-24">
+          <div class="flex items-center flex-col lg:flex-row p-12 lg:p-24">
             <!-- Text -->
             <div class="flex-1">
               <h2 class="text-4xl lg:text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
@@ -100,7 +100,7 @@
         </div>
         <!-- Slide 3 -->
         <div id="slide3" class="carousel-item relative w-full">
-          <div class="flex flex-col lg:flex-row p-12 lg:p-24">
+          <div class="flex items-center flex-col lg:flex-row p-12 lg:p-24">
             <!-- Text -->
             <div class="flex-1">
               <h2 class="text-4xl lg:text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
@@ -119,7 +119,7 @@
         </div>
         <!-- Slide 4 -->
         <div id="slide4" class="carousel-item relative w-full">
-          <div class="flex flex-col lg:flex-row p-12 lg:p-24">
+          <div class="flex items-center flex-col lg:flex-row p-12 lg:p-24">
             <!-- Text -->
             <div class="flex-1">
               <h2 class="text-4xl lg:text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
