section title added for featured bike-section

--- a/index.html
+++ b/index.html
@@ -140,8 +140,11 @@
      </header>
 
      <!-- Main Section Starts Here -->
-     <main class="md:container mx:auto">
-
+     <main class="md:container mx-auto py-32">
+      <!-- Featured Bike Section -->
+       <section>
+        <h2 class="text-5xl font-semibold text-center">Fetured Bikes In This Year</h2>
+       </section>
      </main>
 
      <!-- Footer Section Starts Here -->
