--- a/index.html
+++ b/index.html
@@ -143,7 +143,10 @@
      <main class="md:container mx-auto py-32">
       <!-- Featured Bike Section -->
        <section>
-        <h2 class="text-5xl font-semibold text-center">Fetured Bikes In This Year</h2>
+        <div class="text-center">
+          <h2 class="text-5xl font-semibold">Fetured Bikes In This Year</h2>
+          <p class="text-sm text-orange-400 font-semibold relative pb-0.5">Best bike collection <span class="w-20 h-0.5 absolute bottom-0 left-1/2 transform -translate-x-1/2 bg-orange-400"></span> </p>
+        </div>
        </section>
      </main>
 
