--- a/index.html
+++ b/index.html
@@ -147,6 +147,12 @@
           <h2 class="text-5xl font-semibold">Fetured Bikes In This Year</h2>
           <p class="text-sm text-orange-400 font-semibold relative pb-0.5">Best bike collection <span class="w-20 h-0.5 absolute bottom-0 left-1/2 transform -translate-x-1/2 bg-orange-400"></span> </p>
         </div>
+        <!-- Bike collection -->
+         <div class="grid gird-cols-1 lg:grid-cols-3 justify-items-center lg:items-center py-11">
+          <img src="images/others/feature-bike.png" alt="">
+          <img class="w-72" src="images/others/extrabike.png" alt="">
+          <img class="grayscale" src="images/others/feature-bike.png" alt="">
+         </div>
        </section>
      </main>
 
