--- a/index.html
+++ b/index.html
@@ -154,6 +154,28 @@
           <img class="grayscale" src="images/others/feature-bike.png" alt="">
          </div>
        </section>
+       <!-- News Section -->
+        <section>
+          <h2 class="text-2xl lg:text-5xl font-semibold text-center">Latest News</h2>
+          <!-- News cards -->
+           <div>
+            <!-- Card 1 -->
+            <div class="card bg-base-100 w-96 shadow-sm">
+              <figure>
+                <img
+                  src="./images/others/latest1.png"
+                  alt="bikes" />
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title">Card Title</h2>
+                <p>A card component has a figure, a body part, and inside body there are title and actions parts</p>
+                <div class="card-actions justify-end">
+                  <button class="btn btn-primary">Buy Now</button>
+                </div>
+              </div>
+            </div>
+           </div>
+        </section>
      </main>
 
      <!-- Footer Section Starts Here -->
