styles are added for single-card

--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
                   alt="bikes" />
               </figure>
               <div class="card-body">
-                <h2 class="card-title">Card Title</h2>
-                <p>A card component has a figure, a body part, and inside body there are title and actions parts</p>
-                <div class="card-actions justify-end">
-                  <button class="btn btn-primary">Buy Now</button>
+                <h2 class="text-3xl font-semibold">Ducati XDIAVEL S-73</h2>
+                <p class="text-base text-gray-500">The Ducati XDiavel S-73 combines powerful performance, sleek design, advanced technology, and unmatched comfort for riders.</p>
+                <div class="card-actions">
+                  <button class="btn bg-orange-400 text-white">Buy Now</button>
                 </div>
               </div>
             </div>
