latest news section is completed

--- a/index.html
+++ b/index.html
@@ -158,19 +158,47 @@
         <section>
           <h2 class="text-2xl lg:text-5xl font-semibold text-center">Latest News</h2>
           <!-- News cards -->
-           <div>
+           <div class="grid grid-cols-1 lg:grid-cols-3 justify-items-center py-12">
             <!-- Card 1 -->
             <div class="card bg-base-100 w-96 shadow-sm">
               <figure>
+                <img src="./images/others/latest1.png"alt="bikes" />
+              </figure>
+              <div class="card-body">
+                <h2 class="text-2xl font-semibold">Ducati XDIAVEL S-73</h2>
+                <p class="text-base text-gray-500">The Ducati XDiavel S-73 combines powerful performance, sleek design, advanced technology, and unmatched comfort for riders.</p>
+                <div class="card-actions">
+                  <button class="btn btn-lg bg-orange-400 text-lg font-normal text-white p-4">Read More</button>
+                </div>
+              </div>
+            </div>
+            <!-- Card 2 -->
+            <div class="card bg-base-100 w-96 shadow-sm">
+              <figure>
                 <img
-                  src="./images/others/latest1.png"
+                  src="./images/others/latest2.png"
                   alt="bikes" />
               </figure>
               <div class="card-body">
-                <h2 class="text-3xl font-semibold">Ducati XDIAVEL S-73</h2>
-                <p class="text-base text-gray-500">The Ducati XDiavel S-73 combines powerful performance, sleek design, advanced technology, and unmatched comfort for riders.</p>
-                <div class="card-actions">
-                  <button class="btn bg-orange-400 text-white">Buy Now</button>
+                <h2 class="text-2xl font-semibold">Motorcycles & Scooters</h2>
+                <p class="text-base text-gray-500">The Motorcycles & Scooters combines powerful performance, sleek design, advanced technology, and unmatched comfort for riders.</p>
+                <div>
+                  <button class="btn btn-lg border-[1px] border-orange-400 text-lg font-normal text-orange-400 p-4">Read More</button>
+                </div>
+              </div>
+            </div>
+            <!-- Card 3 -->
+            <div class="card bg-base-100 w-96 shadow-sm">
+              <figure>
+                <img
+                  src="./images/others/latest3.png"
+                  alt="bikes" />
+              </figure>
+              <div class="card-body">
+                <h2 class="text-2xl font-semibold">2021 Honda CBR500R</h2>
+                <p class="text-base text-gray-500">The 2021 Honda CBR500R combines powerful performance, sleek design, advanced technology, and unmatched comfort for riders.</p>
+                <div>
+                  <button class="btn btn-lg border-2 border-orange-400 text-lg font-normal text-orange-400 p-4">Read More</button>
                 </div>
               </div>
             </div>
