happy-cliens section title added

--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
           <img class="grayscale" src="images/others/feature-bike.png" alt="">
          </div>
        </section>
-       <!-- News Section -->
-        <section>
+       <!-- Latest News Section -->
+        <section class="mt-20">
           <h2 class="text-2xl lg:text-5xl font-semibold text-center">Latest News</h2>
           <!-- News cards -->
            <div class="grid grid-cols-1 lg:grid-cols-3 justify-items-center py-12">
@@ -204,6 +204,11 @@
             </div>
            </div>
         </section>
+
+        <!-- Happy Clients Area -->
+         <section>
+          <h2>Happy <span>Clients says</span></h2>
+         </section>
      </main>
 
      <!-- Footer Section Starts Here -->
