spacing added for happy-client section and styles added for section title

--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
         </section>
 
         <!-- Happy Clients Area -->
-         <section>
-          <h2>Happy <span>Clients says</span></h2>
+         <section class="py-20">
+          <h2 class="text-5xl font-semibold text-center">Happy <span class="text-orange-400">Clients says</span></h2>
          </section>
      </main>
 
