clients card content added

--- a/index.html
+++ b/index.html
@@ -208,6 +208,25 @@
         <!-- Happy Clients Area -->
          <section class="py-20">
           <h2 class="text-5xl font-semibold text-center">Happy <span class="text-orange-400">Clients says</span></h2>
+
+          <!-- Clients Card Area -->
+           <div>
+            <!-- Card 1 -->
+            <div class="card bg-base-100 w-96 shadow-sm">
+              <figure>
+                <img
+                  src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+                  alt="Shoes" />
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title">Card Title</h2>
+                <p>A card component has a figure, a body part, and inside body there are title and actions parts</p>
+                <div class="card-actions justify-end">
+                  <button class="btn btn-primary">Buy Now</button>
+                </div>
+              </div>
+            </div>
+           </div>
          </section>
      </main>
 
