all dummy contents are changed from the card

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     
+    
     <style>
         /* Poppins font*/
         .font-poppins{
@@ -215,14 +216,20 @@
             <div class="card bg-base-100 w-96 shadow-sm">
               <figure>
                 <img
-                  src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+                  src="./images/others/user-1.png"
                   alt="Shoes" />
               </figure>
               <div class="card-body">
-                <h2 class="card-title">Card Title</h2>
-                <p>A card component has a figure, a body part, and inside body there are title and actions parts</p>
-                <div class="card-actions justify-end">
-                  <button class="btn btn-primary">Buy Now</button>
+                <p>Slate helps you see how 
+                  many more days you need 
+                  to work to reach your financial 
+                  goal for the month and year.</p>
+                <div class="card-actions">
+                  <div>
+
+                  </div>
+                  <h5>Rgina Miles</h5>
+                  <h6>Banker</h6>
                 </div>
               </div>
             </div>
