--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     
+    <!-- font-awesome cdn link -->
     
     <style>
         /* Poppins font*/
