happy-clients section is completed and responsive now

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     
     <!-- font-awesome cdn link -->
+    <script src="https://kit.fontawesome.com/45413b82f0.js" crossorigin="anonymous"></script>
     
     <style>
         /* Poppins font*/
@@ -209,28 +210,82 @@
 
         <!-- Happy Clients Area -->
          <section class="py-20">
-          <h2 class="text-5xl font-semibold text-center">Happy <span class="text-orange-400">Clients says</span></h2>
+          <h2 class="text-2xl md:text-5xl font-semibold text-center pb-12">Happy <span class="text-orange-400">Clients says</span></h2>
 
           <!-- Clients Card Area -->
-           <div>
+           <div class="grid grid-cols-1 gap-10 md:grid-cols-2 lg:grid-cols-3 justify-items-center">
             <!-- Card 1 -->
-            <div class="card bg-base-100 w-96 shadow-sm">
+            <div class="card bg-base-100 w-96 border-[1px] border-gray-200 px-9 py-10">
               <figure>
-                <img
+                <img class="w-36"
                   src="./images/others/user-1.png"
                   alt="Shoes" />
               </figure>
-              <div class="card-body">
-                <p>Slate helps you see how 
+              <div class="card-body text-center">
+                <p class="text-gray-500 tracking-[0.5px] leading-[26px]">Slate helps you see how 
                   many more days you need 
                   to work to reach your financial 
                   goal for the month and year.</p>
-                <div class="card-actions">
-                  <div>
-
+                <div class="space-y-3">
+                  <div class="text-orange-400">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
                   </div>
-                  <h5>Rgina Miles</h5>
-                  <h6>Banker</h6>
+                  <h5 class="text-sm font-semibold text-blue-500 tracking-[0.2px] leading-[24px]">Rgina Miles</h5>
+                  <h6 class="text-sm font-semibold tracking-[0.2px] leading-[24px]">Banker</h6>
+                </div>
+              </div>
+            </div>
+            <!-- Card 2 -->
+            <div class="card bg-base-100 w-96 border-[1px] border-gray-200 px-9 py-10">
+              <figure>
+                <img class="w-36"
+                  src="./images/others/user-2.png"
+                  alt="Shoes" />
+              </figure>
+              <div class="card-body text-center">
+                <p class="text-gray-500 tracking-[0.5px] leading-[26px]">Slate helps you see how 
+                  many more days you need 
+                  to work to reach your financial 
+                  goal for the month and year.</p>
+                <div class="space-y-3">
+                  <div class="text-orange-400">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                  </div>
+                  <h5 class="text-sm font-semibold text-blue-500 tracking-[0.2px] leading-[24px]">Oracle Ayaka</h5>
+                  <h6 class="text-sm font-semibold tracking-[0.2px] leading-[24px]">Marketer</h6>
+                </div>
+              </div>
+            </div>
+            <!-- Card 3 -->
+            <div class="card bg-base-100 w-96 border-[1px] border-gray-200 px-9 py-10">
+              <figure>
+                <img class="w-36"
+                  src="./images/others/user-3.png"
+                  alt="Shoes" />
+              </figure>
+              <div class="card-body text-center">
+                <p class="text-gray-500 tracking-[0.5px] leading-[26px]">Slate helps you see how 
+                  many more days you need 
+                  to work to reach your financial 
+                  goal for the month and year.</p>
+                <div class="space-y-3">
+                  <div class="text-orange-400">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                  </div>
+                  <h5 class="text-sm font-semibold text-blue-500 tracking-[0.2px] leading-[24px]">Queen Nyala</h5>
+                  <h6 class="text-sm font-semibold tracking-[0.2px] leading-[24px]">Designer</h6>
                 </div>
               </div>
             </div>
