frequently-ask-question section title and image added

--- a/index.html
+++ b/index.html
@@ -291,6 +291,21 @@
             </div>
            </div>
          </section>
+
+        <!-- Frequently Ask Question Section -->
+         <section>
+          <h2 class="text-2xl lg:text-5xl font-semibold text-center">Frequently Asked <span class="text-orange-400">Questions</span></h2>
+
+            <!-- Frequenst Ask content -->
+             <div>
+              <div>
+                <img class="md:w-[446px]" src="./images/others/faq.png" alt="">
+              </div>
+              <div>
+
+              </div>
+             </div>
+         </section>
      </main>
 
      <!-- Footer Section Starts Here -->
