frequently-ask-question text added

--- a/index.html
+++ b/index.html
@@ -294,15 +294,31 @@
 
         <!-- Frequently Ask Question Section -->
          <section>
-          <h2 class="text-2xl lg:text-5xl font-semibold text-center">Frequently Asked <span class="text-orange-400">Questions</span></h2>
+          <h2 class="text-2xl lg:text-5xl font-semibold text-center pb-12">Frequently Asked <span class="text-orange-400">Questions</span></h2>
 
             <!-- Frequenst Ask content -->
              <div>
+              <!-- Faq Image -->
               <div>
-                <img class="md:w-[446px]" src="./images/others/faq.png" alt="">
+                <img class="lg:w-[446px]" src="./images/others/faq.png" alt="">
               </div>
+              <!-- Faq Text -->
               <div>
-
+                <div class="collapse collapse-arrow bg-base-100 border border-base-300">
+                  <input type="radio" name="my-accordion-2" checked="checked" />
+                  <div class="collapse-title font-semibold">How do I create an account?</div>
+                  <div class="collapse-content text-sm">Click the "Sign Up" button in the top right corner and follow the registration process.</div>
+                </div>
+                <div class="collapse collapse-arrow bg-base-100 border border-base-300">
+                  <input type="radio" name="my-accordion-2" />
+                  <div class="collapse-title font-semibold">I forgot my password. What should I do?</div>
+                  <div class="collapse-content text-sm">Click on "Forgot Password" on the login page and follow the instructions sent to your email.</div>
+                </div>
+                <div class="collapse collapse-arrow bg-base-100 border border-base-300">
+                  <input type="radio" name="my-accordion-2" />
+                  <div class="collapse-title font-semibold">How do I update my profile information?</div>
+                  <div class="collapse-content text-sm">Go to "My Account" settings and select "Edit Profile" to make changes.</div>
+                </div>
               </div>
              </div>
          </section>
