frequently-ask-question is completed and responsive

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <!-- Featured Bike Section -->
        <section>
         <div class="text-center">
-          <h2 class="text-2xl lg:text-5xl font-semibold">Fetured Bikes In This Year</h2>
+          <h2 class="text-3xl lg:text-5xl font-semibold">Fetured Bikes In This Year</h2>
           <p class="text-sm text-orange-400 font-semibold relative pb-0.5">Best bike collection <span class="w-20 h-0.5 absolute bottom-0 left-1/2 transform -translate-x-1/2 bg-orange-400"></span> </p>
         </div>
         <!-- Bike collection -->
@@ -159,7 +159,7 @@
        </section>
        <!-- Latest News Section -->
         <section class="mt-20">
-          <h2 class="text-2xl lg:text-5xl font-semibold text-center">Latest News</h2>
+          <h2 class="text-3xl lg:text-5xl font-semibold text-center">Latest News</h2>
           <!-- News cards -->
            <div class="grid grid-cols-1 lg:grid-cols-3 justify-items-center py-12">
             <!-- Card 1 -->
@@ -210,7 +210,7 @@
 
         <!-- Happy Clients Area -->
          <section class="py-20">
-          <h2 class="text-2xl md:text-5xl font-semibold text-center pb-12">Happy <span class="text-orange-400">Clients says</span></h2>
+          <h2 class="text-3xl md:text-5xl font-semibold text-center pb-12">Happy <span class="text-orange-400">Clients says</span></h2>
 
           <!-- Clients Card Area -->
            <div class="grid grid-cols-1 gap-10 md:grid-cols-2 lg:grid-cols-3 justify-items-center">
@@ -294,30 +294,37 @@
 
         <!-- Frequently Ask Question Section -->
          <section>
-          <h2 class="text-2xl lg:text-5xl font-semibold text-center pb-12">Frequently Asked <span class="text-orange-400">Questions</span></h2>
+          <h2 class="text-3xl md:text-5xl font-semibold text-center pb-12 px-7 leading-[50px]"><span>Frequently</span> Asked <span class="text-orange-400">Questions</span></h2>
 
             <!-- Frequenst Ask content -->
-             <div>
+             <div class="flex flex-col md:flex-row justify-around items-center gap-28">
               <!-- Faq Image -->
               <div>
-                <img class="lg:w-[446px]" src="./images/others/faq.png" alt="">
+                <img class="lg:w-[446px] px-11" src="./images/others/faq.png" alt="">
               </div>
               <!-- Faq Text -->
-              <div>
+              <div class="md:w-[552px]">
                 <div class="collapse collapse-arrow bg-base-100 border border-base-300">
                   <input type="radio" name="my-accordion-2" checked="checked" />
-                  <div class="collapse-title font-semibold">How do I create an account?</div>
-                  <div class="collapse-content text-sm">Click the "Sign Up" button in the top right corner and follow the registration process.</div>
+                  <div class="collapse-title font-semibold">What are the most important things I should <br>
+                    know about riding a bike?</div>
+                  <div class="collapse-content text-sm text-gray-600">Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </div>
                 </div>
                 <div class="collapse collapse-arrow bg-base-100 border border-base-300">
                   <input type="radio" name="my-accordion-2" />
-                  <div class="collapse-title font-semibold">I forgot my password. What should I do?</div>
-                  <div class="collapse-content text-sm">Click on "Forgot Password" on the login page and follow the instructions sent to your email.</div>
+                  <div class="collapse-title font-semibold">How can I tell if my helmet is old and I need a <br> 
+                    new one?</div>
+                  <div class="collapse-content text-sm text-gray-600">Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </div>
                 </div>
                 <div class="collapse collapse-arrow bg-base-100 border border-base-300">
                   <input type="radio" name="my-accordion-2" />
-                  <div class="collapse-title font-semibold">How do I update my profile information?</div>
-                  <div class="collapse-content text-sm">Go to "My Account" settings and select "Edit Profile" to make changes.</div>
+                  <div class="collapse-title font-semibold">My bike has been in storage is it safe to ride?</div>
+                  <div class="collapse-content text-sm text-gray-600">Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </div>
+                </div>
+                <div class="collapse collapse-arrow bg-base-100 border border-base-300">
+                  <input type="radio" name="my-accordion-2" />
+                  <div class="collapse-title font-semibold">What rules should I follow when riding my bike?</div>
+                  <div class="collapse-content text-sm text-gray-600">Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </div>
                 </div>
               </div>
              </div>
