background color added for footer section

--- a/index.html
+++ b/index.html
@@ -332,8 +332,8 @@
      </main>
 
      <!-- Footer Section Starts Here -->
-     <footer>
-
+     <footer class="bg-[#0B0D17]">
+      
      </footer>
 </body>
 </html>
