--- a/index.html
+++ b/index.html
@@ -332,8 +332,33 @@
      </main>
 
      <!-- Footer Section Starts Here -->
-     <footer class="bg-[#0B0D17]">
-      
+     <footer class="bg-[#0B0D17] font-manrope">
+      <div class="container mx-auto pt-14 pb-20">
+        <div class="">
+          <!-- row 1 -->
+          <div>
+            <ul class="menu menu-vertical lg:menu-horizontal text-white">
+              <li><a class="#">Download</a></li>
+              <li><a class="#">Licence</a></li>
+            </ul>
+          </div>
+          <!-- Row 2 -->
+           <div>
+              <ul class="menu menu-vertical lg:menu-horizontal text-white mb-4">
+                <li><a class="#">About</a></li>
+                <li><a class="#">Features</a></li>
+                <li><a class="#">Pricing</a></li>
+                <li><a class="#">Careers</a></li>
+                <li><a class="#">Help</a></li>
+                <li><a class="#">Privacy Policy</a></li>
+              </ul>
+           </div>
+           <!-- row 3 -->
+            <div>
+              <p class="text-white ps-4 text-sm">© 2020 bike. All rights reserved</p>
+            </div>
+        </div>
+      </div>
      </footer>
 </body>
 </html>
