footer app-icon added

--- a/index.html
+++ b/index.html
@@ -335,28 +335,38 @@
      <footer class="bg-[#0B0D17] font-manrope">
       <div class="container mx-auto pt-14 pb-20">
         <div class="">
-          <!-- row 1 -->
-          <div>
-            <ul class="menu menu-vertical lg:menu-horizontal text-white">
-              <li><a class="#">Download</a></li>
-              <li><a class="#">Licence</a></li>
-            </ul>
-          </div>
-          <!-- Row 2 -->
+          <!-- Footer Menu area -->
            <div>
-              <ul class="menu menu-vertical lg:menu-horizontal text-white mb-4">
-                <li><a class="#">About</a></li>
-                <li><a class="#">Features</a></li>
-                <li><a class="#">Pricing</a></li>
-                <li><a class="#">Careers</a></li>
-                <li><a class="#">Help</a></li>
-                <li><a class="#">Privacy Policy</a></li>
-              </ul>
-           </div>
-           <!-- row 3 -->
-            <div>
-              <p class="text-white ps-4 text-sm">© 2020 bike. All rights reserved</p>
+              <!-- row 1 -->
+              <div>
+                <ul class="menu menu-vertical lg:menu-horizontal text-white">
+                  <li><a class="#">Download</a></li>
+                  <li><a class="#">Licence</a></li>
+                </ul>
+              </div>
+              <!-- Row 2 -->
+              <div>
+                  <ul class="menu menu-vertical lg:menu-horizontal text-white mb-4">
+                    <li><a class="#">About</a></li>
+                    <li><a class="#">Features</a></li>
+                    <li><a class="#">Pricing</a></li>
+                    <li><a class="#">Careers</a></li>
+                    <li><a class="#">Help</a></li>
+                    <li><a class="#">Privacy Policy</a></li>
+                  </ul>
+              </div>
+              <!-- row 3 -->
+              <div>
+                <p class="text-white ps-4 text-sm">© 2020 bike. All rights reserved</p>
+              </div>
             </div>
+
+            <!-- Footer App Icon Area -->
+             <div class="space-y-4">
+                <h4 class="text-[#D9DBE1] text-lg">Get the App</h4>
+                <img class="w-32" src="./images/others/ios.png" alt="">
+                <img class="w-32" src="./images/others/android.png" alt="">
+             </div>
         </div>
       </div>
      </footer>
