--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           <p class="text-sm text-orange-400 font-semibold relative pb-0.5">Best bike collection <span class="w-20 h-0.5 absolute bottom-0 left-1/2 transform -translate-x-1/2 bg-orange-400"></span> </p>
         </div>
         <!-- Bike collection -->
-         <div class="grid gird-cols-1 lg:grid-cols-3 justify-items-center gap-8 lg:items-center py-11">
+         <div class="grid gird-cols-1 md:grid-cols-2 lg:grid-cols-3 justify-items-center gap-8 lg:items-center py-11">
           <img src="images/others/feature-bike.png" alt="">
           <img class="w-80" src="images/others/extrabike.png" alt="">
           <img class="grayscale" src="images/others/feature-bike.png" alt="">
