--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <section class="mt-20">
           <h2 class="text-3xl lg:text-5xl font-semibold text-center">Latest News</h2>
           <!-- News cards -->
-           <div class="grid grid-cols-1 lg:grid-cols-3 justify-items-center py-12">
+           <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 justify-items-center py-12 gap-16">
             <!-- Card 1 -->
             <div class="card bg-base-100 w-96 shadow-sm">
               <figure>
