--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 
      <!-- Footer Section Starts Here -->
      <footer class="bg-[#0B0D17] font-manrope">
-      <div class="container mx-auto pt-14 pb-20 px-6">
+      <div class="container mx-auto pt-14 pb-6 md:pb-20 px-6">
         <div class="flex flex-col md:flex-row justify-between">
           <!-- Footer Menu area -->
            <div>
